# VisualizacionOpenGL

./: README.md
Basic_Example_OpenGL/: CMakeLists.txt
Basic_Example_OpenGL/src/: main.cpp
Hello_Square/: CMakeLists.txt
Hello_Square/src/: Main.cpp
Intro_CPP/classes_practice/: CMakeLists.txt  README.md
Intro_CPP/classes_practice/include/: Enemy.h  Entity.h  Game.h  Player.h  Vector2D.h
Intro_CPP/classes_practice/include/IAMovement/: DirectMovement.h  IMovementBehavior.h  LerpMovement.h
Intro_CPP/classes_practice/src/: Enemy.cpp  Entity.cpp  Game.cpp  Player.cpp  main.cpp
Intro_CPP/learningVectors/: CMakeLists.txt  README.md
Intro_CPP/vectors_matrix/: CMakeLists.txt
Mathematical_Fundations/: CMakeLists.txt
Mathematical_Fundations/src/: main.cpp
Template_3D_01/include/: Model.h  Scene.h  ShaderProgram.h  WindowGL.h
Template_3D_01/src/: Scene.cpp  WindowGL.cpp
Template_Custom_Maths/: CMakeLists.txt
Template_Custom_Maths/include/: MathUtils.h  Model.h  Scene.h  ShaderProgram.h
Template_Custom_Maths/src/: Main.cpp  Scene.cpp  ShaderProgram.cpp  WindowGL.cpp
Template_Custom_Maths_Camera/: CMakeLists.txt
Template_Custom_Maths_Camera/include/: Camera.h  MathUtils.h  Scene.h  WindowGL.h
Template_Custom_Maths_Camera/src/: Camera.cpp  Scene.cpp  ShaderProgram.cpp
Template_Custom_Maths_OBJ_Loader/: CMakeLists.txt
Template_Custom_Maths_OBJ_Loader/include/: Model.h  Scene.h
Template_Custom_Maths_OBJ_Loader/shaders/: frag_shader.glsl
Template_Custom_Maths_OBJ_Loader/src/: Scene.cpp  WindowGL.cpp
Template_Grid/: CMakeLists.txt
Template_Grid/include/: Scene.h
Template_Grid/include/models/: Grid.h
Template_Grid/include/obj_helpers/: ModelImporter.h
Template_Grid/shaders/: frag_shader.glsl  vertex_shader.glsl
Template_Grid/src/: Scene.cpp  WindowGL.cpp
Template_Grid/src/models/: Grid.cpp  ImportedModel.cpp
Template_OBJ/: CMakeLists.txt
Template_OBJ/include/: Scene.h  WindowGL.h
Template_OBJ/shaders/: frag_shader.glsl
Template_OBJ_Optimized/: CMakeLists.txt
(+46 files in other folders)
